Update file paths for album images and audio sources

--- a/beats.html
+++ b/beats.html
@@ -145,11 +145,11 @@
       <div class="music-grid">
         <div class="track-row">
           <a
-            href="/Beats/R&B/Ballads 1.jpg"
+            href="Beats/R&B/Ballads 1.jpg"
             target="newtab"
             title="Joji 'Ballads 1' Album Picture"
           >
-            <img src="/Beats/R&B/Ballads 1.jpg" class="album-img" />
+            <img src="Beats/R&B/Ballads 1.jpg" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -157,18 +157,18 @@
               <span class="artist-name">Joji</span>
             </div>
             <audio controls>
-              <source src="/Beats/R&B/Joji - ATTENTION.mp3" type="audio/mpeg" />
+              <source src="Beats/R&B/Joji - ATTENTION.mp3" type="audio/mpeg" />
             </audio>
           </div>
         </div>
 
         <div class="track-row">
           <a
-            href="/Beats/R&B/Niki.png"
+            href="Beats/R&B/Niki.png"
             target="newtab"
             title="Niki 'Nicole' Album Picture"
           >
-            <img src="/Beats/R&B/Niki.png" class="album-img" />
+            <img src="Beats/R&B/Niki.png" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -177,7 +177,7 @@
             </div>
             <audio controls>
               <source
-                src="/Beats/R&B/NIKI - Autumn (Official Lyric Video).mp3"
+                src="Beats/R&B/NIKI - Autumn (Official Lyric Video).mp3"
                 type="audio/mpeg"
               />
             </audio>
@@ -186,11 +186,11 @@
 
         <div class="track-row">
           <a
-            href="/Beats/R&B/Joji_-_Sanctuary.png"
+            href="Beats/R&B/Joji_-_Sanctuary.png"
             target="newtab"
             title="Joji 'Sanctuary' Album Picture"
           >
-            <img src="/Beats/R&B/Joji_-_Sanctuary.png" class="album-img" />
+            <img src="Beats/R&B/Joji_-_Sanctuary.png" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -198,18 +198,18 @@
               <span class="artist-name">Joji</span>
             </div>
             <audio controls>
-              <source src="/Beats/R&B/Sanctuary.mp3" type="audio/mpeg" />
+              <source src="Beats/R&B/Sanctuary.mp3" type="audio/mpeg" />
             </audio>
           </div>
         </div>
 
         <div class="track-row">
           <a
-            href="/Beats/R&B/starboy.jpg"
+            href="Beats/R&B/starboy.jpg"
             target="newtab"
             title="The Weeknd 'Starboy' Album Picture"
           >
-            <img src="/Beats/R&B/starboy.jpg" class="album-img" />
+            <img src="Beats/R&B/starboy.jpg" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -218,7 +218,7 @@
             </div>
             <audio controls>
               <source
-                src="/Beats/R&B/The Weeknd - Reminder (Official Video).mp3"
+                src="Beats/R&B/The Weeknd - Reminder (Official Video).mp3"
                 type="audio/mpeg"
               />
             </audio>
@@ -227,11 +227,11 @@
 
         <div class="track-row">
           <a
-            href="/Beats/R&B/Fetty-wap-again.jpg"
+            href="Beats/R&B/Fetty-wap-again.jpg"
             target="newtab"
             title="Fetty Wap 'Again' Song"
           >
-            <img src="/Beats/R&B/Fetty-wap-again.jpg" class="album-img" />
+            <img src="Beats/R&B/Fetty-wap-again.jpg" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -240,7 +240,7 @@
             </div>
             <audio controls>
               <source
-                src="/Beats/R&B/Fetty Wap - Again [Audio Only].mp3"
+                src="Beats/R&B/Fetty Wap - Again [Audio Only].mp3"
                 type="audio/mpeg"
               />
             </audio>
@@ -249,11 +249,11 @@
 
         <div class="track-row">
           <a
-            href="/Beats/R&B/KissItBetter.jpg"
+            href="Beats/R&B/KissItBetter.jpg"
             target="newtab"
             title="Rihanna 'Anti' Album Photo"
           >
-            <img src="/Beats/R&B/KissItBetter.jpg" class="album-img" />
+            <img src="Beats/R&B/KissItBetter.jpg" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -261,7 +261,7 @@
               <span class="artist-name">Rihanna</span>
             </div>
             <audio controls>
-              <source src="/Beats/R&B/Kiss It Better.mp3" type="audio/mpeg" />
+              <source src="Beats/R&B/Kiss It Better.mp3" type="audio/mpeg" />
             </audio>
           </div>
         </div>
@@ -278,11 +278,11 @@
       <div class="music-grid">
         <div class="track-row">
           <a
-            href="/Beats/OPM/Nandito Ako.jpg"
+            href="Beats/OPM/Nandito Ako.jpg"
             target="newtab"
             title="Nandito ako by Ogie"
           >
-            <img src="/Beats/OPM/Nandito Ako.jpg" class="album-img" />
+            <img src="Beats/OPM/Nandito Ako.jpg" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -291,7 +291,7 @@
             </div>
             <audio controls>
               <source
-                src="/Beats/OPM/Ogie Alcasid - Nandito Ako (Lyrics On Screen).mp3"
+                src="Beats/OPM/Ogie Alcasid - Nandito Ako (Lyrics On Screen).mp3"
                 type="audio/mpeg"
               />
             </audio>
@@ -300,11 +300,11 @@
 
         <div class="track-row">
           <a
-            href="/Beats/OPM/Bumalik kana.jpg"
+            href="Beats/OPM/Bumalik kana.jpg"
             target="newtab"
             title="Lola Amour - Raining in Manila"
           >
-            <img src="/Beats/OPM/Bumalik kana.jpg" class="album-img" />
+            <img src="Beats/OPM/Bumalik kana.jpg" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -313,7 +313,7 @@
             </div>
             <audio controls>
               <source
-                src="/Beats/OPM/Silent Sanctuary - Bumalik Ka Na Sakin (Official Lyric Video).mp3"
+                src="Beats/OPM/Silent Sanctuary - Bumalik Ka Na Sakin (Official Lyric Video).mp3"
                 type="audio/mpeg"
               />
             </audio>
@@ -322,7 +322,7 @@
 
         <div class="track-row">
           <a
-            href="/Beats/OPM/Dito Sa'kin.png"
+            href="Beats/OPM/Dito Sa'kin.png"
             target="newtab"
             title="Earl Agustin - Dito Sa'kin Cover"
           >
@@ -335,7 +335,7 @@
             </div>
             <audio controls>
               <source
-                src="/Beats/OPM/Dito Sa’kin - Earl Agustin (Official Lyric Video).mp3"
+                src="Beats/OPM/Dito Sa’kin - Earl Agustin (Official Lyric Video).mp3"
                 type="audio/mpeg"
               />
             </audio>
@@ -343,11 +343,11 @@
         </div>
         <div class="track-row">
           <a
-            href="/Beats/OPM/Buko.png"
+            href="Beats/OPM/Buko.png"
             target="newtab"
             title="Buko 'Love and Soul' Album Cover"
           >
-            <img src="/Beats/OPM/Buko.png" class="album-img" />
+            <img src="Beats/OPM/Buko.png" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -356,7 +356,7 @@
             </div>
             <audio controls>
               <source
-                src="/Beats/OPM/Buko - Jireh Lim Lyrics.mp3"
+                src="Beats/OPM/Buko - Jireh Lim Lyrics.mp3"
                 type="audio/mpeg"
               />
             </audio>
@@ -364,11 +364,11 @@
         </div>
         <div class="track-row">
           <a
-            href="/Beats/OPM/Unti-Unti.jpg"
+            href="Beats/OPM/Unti-Unti.jpg"
             target="newtab"
             title="Unti-Unti Cover by Globe"
           >
-            <img src="/Beats/OPM/Unti-Unti.jpg" class="album-img" />
+            <img src="Beats/OPM/Unti-Unti.jpg" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -377,7 +377,7 @@
             </div>
             <audio controls>
               <source
-                src="/Beats/OPM/UDD-Unti-Unti Lyric Video (Original Song from Globe Studios Valentines Video 2017).mp3"
+                src="Beats/OPM/UDD-Unti-Unti Lyric Video (Original Song from Globe Studios Valentines Video 2017).mp3"
                 type="audio/mpeg"
               />
             </audio>
@@ -385,11 +385,11 @@
         </div>
         <div class="track-row">
           <a
-            href="/Beats/OPM/Take All The Love.jpg"
+            href="Beats/OPM/Take All The Love.jpg"
             target="newtab"
             title="Arthur Nery Photo Cover"
           >
-            <img src="/Beats/OPM/Take All The Love.jpg" class="album-img" />
+            <img src="Beats/OPM/Take All The Love.jpg" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
@@ -398,7 +398,7 @@
             </div>
             <audio controls>
               <source
-                src="/Beats/OPM/Arthur Nery - TAKE ALL THE LOVE.mp3"
+                src="Beats/OPM/Arthur Nery - TAKE ALL THE LOVE.mp3"
                 type="audio/mpeg"
               />
             </audio>
