Fix image source path for album cover

--- a/beats.html
+++ b/beats.html
@@ -326,7 +326,7 @@
             target="newtab"
             title="Earl Agustin - Dito Sa'kin Cover"
           >
-            <img src="/Beats/OPM/Dito Sa'kin.png" class="album-img" />
+            <img src="Beats/OPM/Dito Sa'kin.png" class="album-img" />
           </a>
           <div class="track-details">
             <div class="track-info-group">
