--- a/biography.html
+++ b/biography.html
@@ -21,7 +21,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="IMAGES/logo.png">
+    <link rel="icon" type="image/png" href="IMAGES/logo.png" />
     <style>
       body {
         font-family: "Lato", sans-serif;
@@ -55,6 +55,10 @@
       .bio-image-container {
         flex: 0 0 200px;
         text-align: center;
+      }
+
+      .bio-image:hover {
+        opacity: 0.7;
       }
 
       .bio-image {
@@ -123,7 +127,7 @@
     <div class="container">
       <div class="center-content">
         <a href="index.html" class="go-top-btn">
-          <i class="fa fa-arrow-left"></i>&nbsp;&nbsp; Go back to Home  
+          <i class="fa fa-arrow-left"></i>&nbsp;&nbsp; Go back to Home
         </a>
       </div>
 
@@ -140,6 +144,7 @@
           <a href="IMAGES/childhood/childhood1.jpg" target="newtab">
             <img
               src="IMAGES/childhood/childhood1.jpg"
+              title="A photo of me in a barong at 10yrs old"
               alt="Childhood"
               class="bio-image"
             />
@@ -183,6 +188,7 @@
           >
             <img
               src="IMAGES/teenage/67862dd2-e73e-485f-b47e-065f6ce28e38.jpg"
+              title="My father hanging my first ever honor medal"
               alt="Teenage Experience"
               class="bio-image"
             />
@@ -231,6 +237,7 @@
           <a href="IMAGES/college year/IMG_1894.JPG" target="newtab">
             <img
               src="IMAGES/college year/IMG_1894.JPG"
+              title="The COF that got me thru first year college"
               alt="College Experience"
               class="bio-image"
             />
