--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="IMAGES/logo.png">
+    <link rel="icon" type="image/png" href="IMAGES/logo.png" />
   </head>
 
   <body>
