--- a/blogpart3.html
+++ b/blogpart3.html
@@ -21,7 +21,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="IMAGES/logo.png">
+    <link rel="icon" type="image/png" href="IMAGES/logo.png" />
 
     <style>
       body {
@@ -79,6 +79,10 @@
         text-align: center;
       }
 
+      .bio-image:hover {
+        opacity: 0.7;
+      }
+
       .bio-image {
         display: inline-block;
         width: 40%;
@@ -114,9 +118,7 @@
         <br />
       </div>
       <br />
-      <h1 id="blogh1">
-        "A creative future for my creative mind?"
-      </h1>
+      <h1 id="blogh1">"A creative future for my creative mind?"</h1>
 
       <p>
         <i>
@@ -154,7 +156,8 @@
         <a href="IMAGES/blogpart3/1.jpg" target="newtab">
           <img
             src="IMAGES/blogpart3/1.jpg"
-            alt="College Experience"
+            title="Having a mind that can design"
+            alt="Photo of a creative brain"
             class="bio-image"
           />
         </a>
@@ -197,7 +200,8 @@
         <a href="IMAGES/blogpart3/2.png" target="newtab">
           <img
             src="IMAGES/blogpart3/2.png"
-            alt="Career Development"
+            title="Using the advantage of designing"
+            alt="Using the advantage of editing for the future"
             class="bio-image"
           />
         </a>
@@ -217,7 +221,7 @@
         <a href="#top" class="go-top-btn">
           <i class="fa fa-arrow-up"></i>&nbsp;&nbsp; Back to Top
         </a>
-        <br>
+        <br />
         <a href="blogpart2.html" class="go-top-btn">
           <i class="fa fa-arrow-left"></i>&nbsp;&nbsp; Previous Page
         </a>
