--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="IMAGES/logo.png">
+    <link rel="icon" type="image/png" href="IMAGES/logo.png" />
   </head>
 
   <body>
@@ -42,7 +42,7 @@
     </header>
     <br /><br /><br /><br /><br />
     <div class="content_home">
-      <img src="IMAGES/profile.jpg" class="profile" />
+      <img src="IMAGES/profile.jpg" class="profile" title="A photo of me 2024"/>
 
       <div class="text_side">
         <p class="home_title">Laurence Mendoza (Yoyenk)</p>
@@ -62,21 +62,21 @@
       </div>
     </div>
 
-    <hr/>
-    <br /><br /><br>
+    <hr />
+    <br /><br /><br />
     <div class="video_container">
       <div class="video_wrapper">
         <video controls poster="IMAGES/video_thumbnail.jpg">
-          <source src="VIDEOS/intro_video.mp4" type="video/mp4" />
+          <source src="blog video.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
       </div>
       <p class="video_caption">
-        <i>Get to know me and the vision behind this personal blog.</i>
+        <i>Play video to see.</i>
       </p>
     </div>
 
-    <hr id="about"/>
+    <hr id="about" />
     <br /><br />
 
     <div class="box_section">
@@ -137,7 +137,8 @@
           <h3><strong>About Me</strong></h3>
           <p>
             <i>
-              Get to know me more about my lifestyle, my dream places, what I like.
+              Get to know me more about my lifestyle, my dream places, what I
+              like.
             </i>
           </p>
         </div>
