--- a/blogpart1.html
+++ b/blogpart1.html
@@ -21,7 +21,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="IMAGES/logo.png">
+    <link rel="icon" type="image/png" href="IMAGES/logo.png" />
 
     <style>
       body {
@@ -83,6 +83,10 @@
       .img-container {
         padding: 16px 0;
         text-align: center;
+      }
+
+      .bio-image:hover {
+        opacity: 0.7;
       }
 
       .bio-image {
@@ -152,7 +156,8 @@
         <a href="IMAGES/blogpart1/IMG_3931.jpg" target="newtab">
           <img
             src="IMAGES/blogpart1/IMG_3931.jpg"
-            alt="College Experience"
+            title="Paid edit by PeryaPlay a Verified Online Casino"
+            alt="Paid edit by PeryaPlay a Verified Online Casino"
             class="bio-image"
           />
         </a>
@@ -178,7 +183,8 @@
         <a href="IMAGES/blogpart1/1.jpg" target="newtab">
           <img
             src="IMAGES/blogpart1/1.jpg"
-            alt="College Experience"
+            title="Balancing Editing and Personal Life"
+            alt="Balancing Editing and Personal Life"
             class="bio-image"
           />
         </a>
@@ -204,7 +210,8 @@
         <a href="IMAGES/blogpart1/IMG_5824.jpg" target="newtab">
           <img
             src="IMAGES/blogpart1/IMG_5824.jpg"
-            alt="College Experience"
+            title="1st Year College Last Day!"
+            alt="College Friends"
             class="bio-image"
           />
         </a>
@@ -224,7 +231,7 @@
         <a href="#top" class="go-top-btn">
           <i class="fa fa-arrow-up"></i>&nbsp;&nbsp; Back to Top
         </a>
-        <br>
+        <br />
         <a href="blogpart2.html" class="go-top-btn">
           Next Page &nbsp;&nbsp;<i class="fa fa-arrow-right"></i>
         </a>
