--- a/blogpart2.html
+++ b/blogpart2.html
@@ -21,7 +21,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="IMAGES/logo.png">
+    <link rel="icon" type="image/png" href="IMAGES/logo.png" />
 
     <style>
       body {
@@ -96,6 +96,10 @@
         border-radius: 10px;
         cursor: pointer;
       }
+
+      .bio-image:hover {
+        opacity: 0.7;
+      }
     </style>
   </head>
 
@@ -124,9 +128,7 @@
         <br /><br />
       </div>
 
-      <h1 id="blogh1">
-        "How Photoshop Reshaped My Pandemic Era"
-      </h1>
+      <h1 id="blogh1">"How Photoshop Reshaped My Pandemic Era"</h1>
 
       <p>
         I didn’t just start Photoshop because I wanted to. It drew my attention
@@ -173,6 +175,7 @@
         <a href="IMAGES/blogpart2/1.webp" target="newtab">
           <img
             src="IMAGES/blogpart2/1.webp"
+            title="Learning Photoshop thru online and self learning"
             alt="Photoshop Learning"
             class="bio-image"
           />
@@ -210,6 +213,7 @@
         <a href="IMAGES/blogpart2/2.webp" target="newtab">
           <img
             src="IMAGES/blogpart2/2.webp"
+            title="Started earning from photoshop at the age of 15"
             alt="Earning from Editing"
             class="bio-image"
           />
@@ -252,7 +256,7 @@
         <a href="#top" class="go-top-btn">
           <i class="fa fa-arrow-up"></i>&nbsp;&nbsp; Back to Top
         </a>
-        <br>
+        <br />
         <a href="blogpart1.html" class="go-top-btn">
           <i class="fa fa-arrow-left"></i>&nbsp;&nbsp; Previous Page
         </a>
