Update video poster image in index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <br /><br /><br />
     <div class="video_container">
       <div class="video_wrapper">
-        <video controls poster="IMAGES/video_thumbnail.jpg">
+        <video controls poster="IMAGES/BackgroundPhotos/MainBackground.png">
           <source src="blog video.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
